<resources>
    <string name="app_name">Weather Now</string>
    <string name="action_settings">Settings</string>
    <string name="ok">ok</string>
    <string name="reason">Weather Now needs access to both the internet and location in order to work correctly. Please allow access before continuing.</string>
    <string name="current_temperature">0</string>
    <string name="current_city">City</string>
    <string name="current_weather_description">description</string>
    <string name="later_today">Later Today</string>
    <string name="temp">0</string>
    <string name="description"> description</string>
    <string name="later_today_icon">Later today icon.</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="tomorrow_icon">Tomorrow Icon</string>
    <string name="after_tomorrow">After Tomorrow</string>
    <string name="after_tomorrow_icon">After Tomorrow Icon</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
