<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical|center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/later_today"
        android:id="@+id/tvLaterToday"
        android:textSize="@dimen/forecast_text_size" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temp"
            android:id="@+id/tvLaterTemp"
            android:textSize="@dimen/forecast_text_size" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ivLaterIcon"
            android:contentDescription="@string/later_today_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:id="@+id/tvLaterDescription"
            android:textSize="@dimen/forecast_text_size"/>

    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tomorrow"
        android:id="@+id/tvTomorrow"
        android:textSize="@dimen/forecast_text_size"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temp"
            android:id="@+id/tvTomorrowTemp"
            android:textSize="@dimen/forecast_text_size"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ivTomorrowIcon"
            android:contentDescription="@string/tomorrow_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:id="@+id/tvTomorrowDescription"
            android:textSize="@dimen/forecast_text_size" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/after_tomorrow"
        android:id="@+id/tvAfterTomorrow"
        android:textSize="@dimen/forecast_text_size"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temp"
            android:id="@+id/tvAfterTomorrowTemp"
            android:textSize="@dimen/forecast_text_size" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ivAfterTomorrowIcon"
            android:contentDescription="@string/after_tomorrow_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:id="@+id/tvAfterTomorrowDescription"
            android:textSize="@dimen/forecast_text_size" />

    </LinearLayout>

</LinearLayout>