<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="6"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/current_city"
        android:id="@+id/tvCurLocName"
        android:layout_weight="1"
        android:gravity="center"
        android:textIsSelectable="false"
        android:textSize="@dimen/city_name_text_size" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/current_temperature"
            android:id="@+id/tvCurTemp"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="@dimen/current_temp_text_size" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/ivWeatherIcon"
            android:layout_weight="1"
            android:foregroundGravity="center" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/current_weather_description"
        android:id="@+id/tvDescription"
        android:layout_weight="1"
        android:gravity="center"
        android:textSize="@dimen/weather_description_text_size" />

</LinearLayout>